# laser

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  gitignore  laser_transmission_timeslicing.ipynb  mkdocs.yml  notes.md  onenode.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.ipynb  tox.ini  twonodes.ipynb
.github/workflows/: bump-version.yml  ci.yml  github-actions.yml  mkdocs-ghp.yml  mkdocs-pr.yml  mkdocs.yml  release-publish.yml  test-bump-release.yml
CALIB/: Dockerfile  README.rst  calib_arch_roles_steps2.dot  docker-compose.yml  howto_local_docker.txt  impatient.py  laser.py  mysql_storage.py  objective.py  optuna_review_contour.py  params.json  plot_opt_hist.py  requirements.txt  run.py  worker.py
ci/: requirements.txt
customization/includes/: abbreviations.md
docs/: architecture.md  architecture.rst  authors.md  calibration.md  calibration.rst  conf.py  contributing.md  development.md  eula.md  eula.rst  example.md  example.rst  gettingstarted.rst  glossary.md  index  index.md  index.rst  installation.md  installation.rst  kmestimator.md  kmestimator.rst  migration.md  migration.rst  overview.rst  parameters.md  performance.md  performance.rst  pyramids.md  pyramids.rst  requirements.txt  spatialexample.md  spatialexample.rst  usage.md  usage.rst  vdexample.md  vdexample.rst
docs/_templates/: footer_start.html
docs/development/: index.md
docs/get-started/: calibration.md  complexity.md  custom.md  index.md  initialization.md  optimization.md  prebuilt.md
docs/installation/: index.md
docs/parameters/: index.md
docs/reference/: idmlaser.rst  index.rst  laser_core.rst
docs/software-overview/: architecture.md  database.md  files.md  index.md  modules.md
docs/source/: laser.core.demographics.rst  laser.core.rst  laser_core.demographics.rst  laser_core.rst  modules.rst
docs/tutorials/: index.md  kmestimator.ipynb  sir.md  squashing-sir.md
examples/: Nigeria-2024.csv  United States of America-2024.csv  age_pyramid.ipynb  going_faster.ipynb  kmestimator.ipynb
jb/: Dockerfile_ccs  Dockerfile_ew  Dockerfile_singleNodeLondon  ImageName  MANIFEST.in  QuickStart.ipynb  docker-compose.yml  laser.id  makefile  notebook.ipynb  run_laser_on_comps.py  setup.py  setup.sh
jb/R_scripts/: create_pop_as_csv.R  create_pop_as_csv_lean.R  fit_eula_pops.R  get_rand_lifespan.R
jb/client/: laser.def  laser_task.py  run_laser_with_sif.py
jb/data/: attraction_probabilities.csv  cbrs.csv  demographics_settings.py  fits.npy  pops.csv
jb/service/: app.py  fits.npy  requirements.txt  spinner.css
jb/src/: demographics_settings.py  demographics_settings_1node.py  demographics_settings_ew.py  measles.py  post_proc.py  report.py  settings.py  sir_numpy.py  sir_numpy_c.py  sir_sql.py  test_ua.py  tlc.py  update_ages.cpp
jb/tests/: compare_3_sqls.py  sqlite_rand_test.py  test.sh  test_calc_new_inf_c.py  test_migrate.py  test_progress_immunities.py  test_progress_infections.py  test_update_ages.py
jb/utils/: add_observed_inc.py  create_pop_as_csv.py  folium_animate_from_sqlite.py
laserdocs/: mkdocs.yml
nnmm/: Makefile  README.md  access_groups.py  age_init.py  ages.c  cholera.py  fertility.py  final_reports.py  immunity.py  init_prev.py  ll_record_writer.c  ll_reporter.c  maternal_immunity.py  measles.ipynb  measles.py  measles_cache_input.py  measles_mod.py  mi.c  mortality.py  nigeria_onenode.py  ri.c  ri.py  schema.py  sia.py  synth_10.py  test_mi_c.py  transmission.py  tx.c  tx.py  tx_inner.c  update_ages.c
nnmm/mods/: access_groups.py  age_init.py  ages.py  fertility.py  ri.c  (+11 more)
outputs/: 20240613-190301-engwal-1-7300-spatial_seir.npy  20240613-190301-engwal-parameters.json
proto/: Vector Consolidation.pptx  consolidate.md  consolidate.py  dynamic_property.py  engwal.md  engwal.py  engwaldata.py  gcpopulation.py  groupedcommunity.py
site/: 404.html  index.html  requirements.txt  sitemap.xml
sncd/: cohorts.ipynb  ewBu4464.csv  ewXYu4464.csv  mixing.py  plotting.py  settlements.py
sphinx-docs/: architecture.rst  calibration.rst  eula.rst  kmestimator.rst  pyramids.rst
sql_modeling/: Dockerfile  README.md  create_pop_as_csv.py  experiment.py  plot_spatial.py  settings.py  sir_numpy.py  sir_sql.py  sir_sql_polars.py
ssa/: immune_decay_params.json  iso_codes_mosaic.py  manifest.py  nigeria_pyramid.csv  pred_psi_processed.csv  synth_small_ssa.py
tests/: engwaldist.npy  explore_seir.py  explore_sir.py  run_numpyba.py  run_taichi.py  scenario_ccs.py  scenario_engwal.py  scenario_nigeria.py  test_agentseir.py  test_agentsir.py  test_aliaseddist.py  test_demographics.py  test_distributions.py  test_enviro.py  test_idmlaser.py  test_kmcurve.py  test_kmestimator.py  test_laser_core.py  test_laserframe.py  test_migration.py  test_one_node.ipynb  test_one_node.py  test_perf.py  test_population.py  test_priorityqueue.py  test_prngseed.py  test_propertyset.py  test_pyramid.py  test_report.py  test_sortedqueue.py  test_spatialpops.py  test_spatialseir.py  test_transmission.py  test_transmission_inner.py  test_userid.py  test_utils.py
(+194 files in other folders)
